# fluidSim

./: .gitignore  CMakeLists.txt  TODO  imgui.ini
documentation/: shadery-założenia.txt
shaders/: vertex.shader
shaders/FluidSPH/: acceleration.shader  accelerationHashed.shader  boundaryParticlesDensity.shader  compute.shader  densityNPressure.shader  densityNpressureHashed.shader  fragment.shader  hashingFunction.shader  movement.shader  resetingHash.shader  test.shader  vertex.shader
shaders/grid3d/: addExternalForces.shader  advectUvelocities.shader  advectVvelocities.shader  advectWvelocities.shader  advection.shader  airUextrapolation.shader  airVextrapolation.shader  airWextrapolation.shader  divergence.shader  fragment.shader  gridCellTypeUpdate.shader  jacobiPressureSolver.shader  levelSetCellType.shader  particleForwardAdvection.shader  pressureUProjection.shader  pressureVProjection.shader  pressureWProjection.shader  vertex.shader  zeroFluid.shader
shaders/grid3d/GaussSeidelSolve/: VRedUpdate.shader  divergenceRedBlack.shader  pressureUpdateBlack.shader  pressureUpdateRed.shader
shaders/grid3d/debugShaders/: divergence.shader  particleVertex.shader  pressureGradient.shader  uVelocity.shader
shaders/gridFluid/: addExternalForces.shader  advectUvelocities.shader  advectVelocities.shader  advectVvelocities.shader  advection.shader  airExtrapolation.shader  airUextrapolation.shader  airVextrapolation.shader  boundaryNoSlip.shader  damBreakInitializer.shader  divergence.shader  fragment.shader  gridCellTypeUpdate.shader  init.shader  jacobiPressureSolver.shader  maxVelocity.shader  particleForwardAdvection.shader  presssureProjection.shader  pressureProjection.shader  pressureUProjection.shader  pressureVProjection.shader  zeroFluid.shader
shaders/gridFluid/GaussSeidelSolve/: UBlackUpdate.shader  VBlackUpdate.shader  divergenceRedBlack.shader  uRedUpdate.shader
shaders/gridFluid/debugShaders/: divergence.shader  particleFragment.shader  particleVertex.shader  pressureGradient.shader  uVelocity.shader  vVelocity.shader
shaders/location/: fragment.shader  vertex.shader
shaders/mixed/: clearUBuffer.shader  clearVBuffer.shader  gridCellTypeUpdate.shader  gridVelocityProjectionU.shader  gridVelocityProjectionV.shader  particleMovement.shader  particleToGridProjection.shader
shaders/mixed/debug/: particleVertex.shader
shaders/particleSolid/: compute.shader  fragment.shader  vertex.shader
shaders/simple/: fragment.shader  vertex.shader
shaders/tests/: fragment.shader  textureTest.shader  vertex.shader
src/: main.cpp  nmain.cpp
src/commons/: shader.cpp  shaderProgram.cpp
src/geometry/: mesh.cpp  vertex.cpp  vertexContainer.cpp
src/headers/GridSimulation/: baseGrid.hpp  grid2d.hpp  grid3d.hpp  grid3dRenderer.hpp  gridrenderer.hpp  mixed.hpp  mixedRenderer.hpp
src/headers/camera/: camera3D.hpp  camera_handlers.hpp  orthographicCamera.hpp  perspectiveCamera.hpp
src/headers/commons/: SPHContextState.hpp  debugOpengl.hpp  debug_data.hpp  imguiHandlers.hpp  keyboard.hpp  setup.hpp  shader.hpp  shaderProgram.hpp
src/headers/geometry/: materialContainer.hpp  mesh.hpp  vertex.hpp  vertexContainer.hpp  vertexData.hpp
src/headers/lights/: positionedLight.hpp
src/headers/math/: quaternion.hpp  vertex_hashing.hpp
src/headers/objects/: object.hpp  objectsMeneger.hpp
src/headers/program/: application.hpp  context.hpp  grid3dContext.hpp  gridContext.hpp  mainContext.hpp  mesh_loader.hpp  mixedContext.hpp  particleRenderer.cpp  particleRenderer.hpp  programManager.hpp  renderer.hpp  sceneLoader.hpp  textureTest.hpp
src/headers/properties/: FluidRenderer.cpp  FluidRenderer.hpp  FluidSPHSimulation.hpp  particles.hpp  physics.hpp  physicsMenager.hpp  properties.hpp  propertyMenager.hpp
src/headers/ui/: baseUI.hpp  gridSim3dUI.hpp  gridSimUI.hpp  mainWindow.hpp  mixedSimUI.hpp  programState.hpp  simulationUI.hpp  sphSimulationUI.hpp
src/objects/: object.cpp  objectsMeneger.cpp
src/program/: mesh_loader.cpp  programManager.cpp  sceneLoader.cpp
src/properties/: particles.cpp  physics.cpp  physicsMenager.cpp
src/src/GridSimulation/: grid2d.cpp  grid3d.cpp  mixed.cpp
src/src/camera/: camera3D.cpp  orthographicCamera.cpp  perspectiveCamera.cpp
src/src/commons/: shader.cpp  shaderProgram.cpp
src/src/geometry/: mesh.cpp  vertex.cpp
src/src/mixedSimulation/: mixed.hpp
src/src/objects/: object.cpp
src/src/program/: application.cpp  context.cpp  grid3dContext.cpp  gridContext.cpp  mesh_loader.cpp  mixedContext.cpp  particleRenderer.cpp  textureTest.cpp
src/src/properties/: FluidRendered.cpp  FluidRenderer.cpp  FluidSPHSimulation.cpp
src/src/ui/: grid3dsimUI.cpp  gridSimUI.cpp  mainWindow.cpp  mixedUI.cpp  simulationUI.cpp  sphSimulationUI.cpp
src/ui/: simulationUI.cpp
